[gd_scene load_steps=4 format=3 uid="uid://dir5gb0jhc5o8"]

[ext_resource type="Script" path="res://Scenes/Main/UI/Inventory/slot.gd" id="1_1fh77"]
[ext_resource type="Texture2D" uid="uid://c68slhs4d8fd3" path="res://Sprites/UI/Inventory/Inventory_select.png" id="2_45b4d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tat67"]
bg_color = Color(0.0392157, 0, 0.356863, 0.32549)

[node name="Slot" type="PanelContainer"]
custom_minimum_size = Vector2(90, 90)
theme_override_styles/panel = SubResource("StyleBoxFlat_tat67")
script = ExtResource("1_1fh77")

[node name="SlotMargin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ItemTexture" type="TextureRect" parent="SlotMargin"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="SelectTexture" type="TextureRect" parent="SlotMargin"]
visible = false
layout_mode = 2
texture = ExtResource("2_45b4d")

[node name="QuantityLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
